# ggrep

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  justfile  noxfile.py  pyproject.toml
docs/source/: conf.py  example.xlsx  index.rst
docs/source/excel/: README.md  employees+financial.xlsx  employees.xlsx  financial.xlsx
src/ggrep/: __init__.py  cell.py  cli.py  col.py  excel.py  grid.py  match.py  row.py
src/xgrep/: cell.py  cli.py  col.py  excel.py  grid.py  match.py  row.py
test/: test_cell.py  test_cli.py  test_col.py  test_excel.py  test_grid.py  test_match.py  test_row.py
